Added JWT utils

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "dependencies": {
     "@dailymotion/vast-client": "github:montevideo-tech/vast-client-js",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "m": "^1.9.0",
     "pino": "^9.5.0",
     "pino-http": "^10.3.0",
