--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "find-config": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "m": "^1.9.0",
     "pino": "^9.5.0",
