Address discussed improvements

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ JWT_EXPIRES_IN='10y'
 API_DISABLE_SIGN='false'
 PINO_LOG_LEVEL='debug'
 PORT='3000'
+VAST_WHITELIST='www.vast1.com,www.vast2.com,localhost'
+ORIGIN_WHITELIST=''
+VAST_MAPPING_JSON={"1" : "http://localhost:3000/samples/sample-vast-1/vast-sample.xml","2" : "https://www.vast2.com","3" : "https://www.vast3.com"}
