vast-client: change to dist branch

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/montevideo-tech/vast-2-sgai#readme",
   "dependencies": {
-    "@dailymotion/vast-client": "github:montevideo-tech/vast-client-js",
+    "@dailymotion/vast-client": "github:montevideo-tech/vast-client-js#dist",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
