--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "m": "^1.9.0",
     "pino": "^9.5.0",
     "pino-http": "^10.3.0",
-    "pino-pretty": "^13.0.0"
+    "pino-pretty": "^13.0.0",
+    "prismjs": "^1.29.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
